[gd_scene load_steps=2 format=3 uid="uid://c2mainmenu01"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.02, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 200.0
horizontal_alignment = 1
vertical_alignment = 1
text = "DISCO COP"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0

[node name="StartButton" type="Button" parent="VBox"]
layout_mode = 2
text = "START GAME"

[node name="QuitButton" type="Button" parent="VBox"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBox/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBox/QuitButton" to="." method="_on_quit_pressed"]
